[gd_scene load_steps=47 format=3 uid="uid://bpt1vtxyj34rm"]

[ext_resource type="Theme" uid="uid://buiv8bi3ttoxa" path="res://Assets/Styles/holo-theme-1.tres" id="1_kd6qj"]
[ext_resource type="Texture2D" uid="uid://do4u2e4lf4m68" path="res://Assets/Images/SpriteSheets/UI/Spritesheet_UI_Hologram.png" id="2_feaq7"]
[ext_resource type="Script" uid="uid://bpdu6f1kc56gp" path="res://Scripts/UI/how_to_play_screen.gd" id="2_pwps1"]
[ext_resource type="PackedScene" uid="uid://eejq2rjbatfu" path="res://Scenes/Components/ui_animation_component.tscn" id="3_j4dy6"]
[ext_resource type="Texture2D" uid="uid://cdt0bfwt47ypl" path="res://Assets/Images/SpriteSheets/UI/Spritesheet_UI_Hologram_Flipped.png" id="4_71qrx"]
[ext_resource type="Texture2D" uid="uid://b6xhugmol1cv" path="res://Assets/Images/SpriteSheets/Animations/enemies/Alien-7.png" id="7_mq6bm"]
[ext_resource type="Texture2D" uid="uid://bdel3f2niyher" path="res://Assets/Images/SpriteSheets/UI/kenney_ui_tilemap.png" id="7_xh7sg"]
[ext_resource type="Texture2D" uid="uid://xaqmghrfq5k8" path="res://Assets/Images/SpriteSheets/Animations/enemies/Alien-6.png" id="8_6o2px"]
[ext_resource type="Texture2D" uid="uid://bpmh7wcvh5b21" path="res://Assets/Images/SpriteSheets/Animations/enemies/Alien-2.png" id="9_sckuv"]
[ext_resource type="Texture2D" uid="uid://bnhhmax51dvb3" path="res://Assets/Images/SpriteSheets/Animations/enemies/Alien-5.png" id="10_h4654"]
[ext_resource type="Texture2D" uid="uid://bo6kbhxsqy6jb" path="res://Assets/Images/SpriteSheets/tileset_sheets/roads_tilemap_1.png" id="11_v4vcj"]
[ext_resource type="Texture2D" uid="uid://dtm7iffk4m2o" path="res://Assets/Images/SpriteSheets/Animations/XP_Anim.png" id="12_fgic0"]
[ext_resource type="Texture2D" uid="uid://c3mxsp4up0wmp" path="res://Assets/Images/SpriteSheets/Animations/magnet.png" id="13_wjjv4"]

[sub_resource type="CanvasTexture" id="CanvasTexture_qsifl"]
diffuse_texture = ExtResource("2_feaq7")

[sub_resource type="AtlasTexture" id="AtlasTexture_tuv24"]
atlas = SubResource("CanvasTexture_qsifl")
region = Rect2(551, 104, 17, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xlb1"]
atlas = ExtResource("4_71qrx")
region = Rect2(232, 104, 17, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_tiln1"]
atlas = ExtResource("7_xh7sg")
region = Rect2(307, 171, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_2i6ti"]
atlas = ExtResource("7_xh7sg")
region = Rect2(307, 188, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_weuau"]
atlas = ExtResource("7_xh7sg")
region = Rect2(324, 188, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_xu2mc"]
atlas = ExtResource("7_xh7sg")
region = Rect2(341, 188, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcn20"]
atlas = ExtResource("7_xh7sg")
region = Rect2(138, 51, 12, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8cvu"]
atlas = ExtResource("7_xh7sg")
region = Rect2(155, 51, 12, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcgn1"]
atlas = ExtResource("7_xh7sg")
region = Rect2(341, 171, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sqfo"]
atlas = ExtResource("7_xh7sg")
region = Rect2(290, 256, 15, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0uf3"]
atlas = ExtResource("7_xh7sg")
region = Rect2(306, 256, 15, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtku7"]
atlas = ExtResource("7_xh7sg")
region = Rect2(528, 239, 15, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta674"]
atlas = ExtResource("7_xh7sg")
region = Rect2(544, 239, 16, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_joh8s"]
atlas = ExtResource("7_xh7sg")
region = Rect2(561, 239, 15, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_8o04g"]
atlas = ExtResource("7_xh7sg")
region = Rect2(255, 221, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rhnu"]
atlas = ExtResource("7_xh7sg")
region = Rect2(255, 255, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tywwa"]
atlas = ExtResource("7_xh7sg")
region = Rect2(136, 289, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nl31"]
atlas = ExtResource("7_xh7sg")
region = Rect2(34, 170, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_103jy"]
atlas = ExtResource("7_xh7sg")
region = Rect2(170, 289, 16, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vbk0"]
atlas = ExtResource("7_xh7sg")
region = Rect2(51, 170, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnjjl"]
atlas = ExtResource("7_xh7sg")
region = Rect2(153, 289, 16, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1v4l"]
atlas = ExtResource("7_xh7sg")
region = Rect2(17, 170, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_826nh"]
atlas = ExtResource("7_mq6bm")
region = Rect2(0, 0, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_q11j5"]
atlas = ExtResource("8_6o2px")
region = Rect2(0, 0, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_bubvu"]
atlas = ExtResource("9_sckuv")
region = Rect2(1, 0, 16, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_yinse"]
atlas = ExtResource("10_h4654")
region = Rect2(2, 0, 22, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_ah8sd"]
atlas = ExtResource("11_v4vcj")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oa6dm"]
atlas = ExtResource("11_v4vcj")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3jc0"]
atlas = ExtResource("11_v4vcj")
region = Rect2(64, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yym0"]
atlas = ExtResource("12_fgic0")
region = Rect2(18, 2, 6, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5adw"]
atlas = ExtResource("13_wjjv4")
region = Rect2(0, 0, 6, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1me2"]
atlas = ExtResource("11_v4vcj")
region = Rect2(112, 96, 16, 16)

[node name="HowToPlayScreen" type="Control"]
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_kd6qj")
script = ExtResource("2_pwps1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.172549, 0.207843, 0.301961, 1)

[node name="UpperLeftContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 150.0
offset_bottom = 60.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MainMenuButton" type="Button" parent="UpperLeftContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../../MiddleLeftContainer/PreviousButton")
focus_neighbor_bottom = NodePath("../../MiddleLeftContainer/PreviousButton")
focus_next = NodePath("../../MiddleLeftContainer/PreviousButton")
focus_previous = NodePath("../../MiddleLeftContainer/PreviousButton")
text = "Back"
icon = SubResource("AtlasTexture_tuv24")
expand_icon = true

[node name="UiAnimationComponent" parent="UpperLeftContainer/MainMenuButton" instance=ExtResource("3_j4dy6")]

[node name="MiddleLeftContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -31.0
offset_right = 150.0
offset_bottom = 31.0
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PreviousButton" type="Button" parent="MiddleLeftContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../../MiddleRightContainer/NextButton")
focus_neighbor_top = NodePath("../../UpperLeftContainer/MainMenuButton")
focus_neighbor_right = NodePath("../../MiddleRightContainer/NextButton")
focus_neighbor_bottom = NodePath("../../UpperLeftContainer/MainMenuButton")
focus_next = NodePath("../../MiddleRightContainer/NextButton")
focus_previous = NodePath("../../MiddleRightContainer/NextButton")
text = "Prev"
icon = SubResource("AtlasTexture_tuv24")
expand_icon = true

[node name="UiAnimationComponent" parent="MiddleLeftContainer/PreviousButton" instance=ExtResource("3_j4dy6")]

[node name="MiddleRightContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -31.0
offset_bottom = 31.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="NextButton" type="Button" parent="MiddleRightContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../../MiddleLeftContainer/PreviousButton")
focus_neighbor_right = NodePath("../../MiddleLeftContainer/PreviousButton")
focus_next = NodePath("../../MiddleLeftContainer/PreviousButton")
focus_previous = NodePath("../../MiddleLeftContainer/PreviousButton")
text = "Next"
icon = SubResource("AtlasTexture_1xlb1")
icon_alignment = 2
expand_icon = true

[node name="UiAnimationComponent" parent="MiddleRightContainer/NextButton" instance=ExtResource("3_j4dy6")]

[node name="BasicControls" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -450.0
offset_right = 600.0
offset_bottom = 450.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainContainer" type="VBoxContainer" parent="BasicControls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainLabel" type="Label" parent="BasicControls/MainContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Controls"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="BasicControls/MainContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BasicControls/MainContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="InputNames" type="VBoxContainer" parent="BasicControls/MainContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 60

[node name="Movement" type="Label" parent="BasicControls/MainContainer/HBoxContainer/InputNames"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Movement"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Aim" type="Label" parent="BasicControls/MainContainer/HBoxContainer/InputNames"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Aim
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fire" type="Label" parent="BasicControls/MainContainer/HBoxContainer/InputNames"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Fire"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Reload" type="Label" parent="BasicControls/MainContainer/HBoxContainer/InputNames"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Reload"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Boost" type="Label" parent="BasicControls/MainContainer/HBoxContainer/InputNames"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Boost"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ToggleAim" type="Label" parent="BasicControls/MainContainer/HBoxContainer/InputNames"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Toggle Auto-Aim"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="BasicControls/MainContainer/HBoxContainer"]
layout_mode = 2

[node name="Keyboard" type="VBoxContainer" parent="BasicControls/MainContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 60

[node name="Movement" type="HBoxContainer" parent="BasicControls/MainContainer/HBoxContainer/Keyboard"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
alignment = 1

[node name="W" type="TextureRect" parent="BasicControls/MainContainer/HBoxContainer/Keyboard/Movement"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_tiln1")
stretch_mode = 5

[node name="A" type="TextureRect" parent="BasicControls/MainContainer/HBoxContainer/Keyboard/Movement"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_2i6ti")
stretch_mode = 5

[node name="S" type="TextureRect" parent="BasicControls/MainContainer/HBoxContainer/Keyboard/Movement"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_weuau")
stretch_mode = 5

[node name="D" type="TextureRect" parent="BasicControls/MainContainer/HBoxContainer/Keyboard/Movement"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_xu2mc")
stretch_mode = 5

[node name="Aim" type="HBoxContainer" parent="BasicControls/MainContainer/HBoxContainer/Keyboard"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
alignment = 1

[node name="Mouse" type="TextureRect" parent="BasicControls/MainContainer/HBoxContainer/Keyboard/Aim"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_jcn20")
stretch_mode = 5

[node name="Fire" type="HBoxContainer" parent="BasicControls/MainContainer/HBoxContainer/Keyboard"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
alignment = 1

[node name="LeftClick" type="TextureRect" parent="BasicControls/MainContainer/HBoxContainer/Keyboard/Fire"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_c8cvu")
stretch_mode = 5

[node name="Reload" type="HBoxContainer" parent="BasicControls/MainContainer/HBoxContainer/Keyboard"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
alignment = 1

[node name="R" type="TextureRect" parent="BasicControls/MainContainer/HBoxContainer/Keyboard/Reload"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_tcgn1")
stretch_mode = 5

[node name="Boost" type="HBoxContainer" parent="BasicControls/MainContainer/HBoxContainer/Keyboard"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 0
alignment = 1

[node name="Shi" type="TextureRect" parent="BasicControls/MainContainer/HBoxContainer/Keyboard/Boost"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_0sqfo")
expand_mode = 3
stretch_mode = 4

[node name="ft" type="TextureRect" parent="BasicControls/MainContainer/HBoxContainer/Keyboard/Boost"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_r0uf3")
expand_mode = 3
stretch_mode = 4

[node name="ToggleAim" type="HBoxContainer" parent="BasicControls/MainContainer/HBoxContainer/Keyboard"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 0
alignment = 1

[node name="Space1" type="TextureRect" parent="BasicControls/MainContainer/HBoxContainer/Keyboard/ToggleAim"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_wtku7")
expand_mode = 3
stretch_mode = 4

[node name="Space2" type="TextureRect" parent="BasicControls/MainContainer/HBoxContainer/Keyboard/ToggleAim"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_ta674")
expand_mode = 3
stretch_mode = 4

[node name="Space3" type="TextureRect" parent="BasicControls/MainContainer/HBoxContainer/Keyboard/ToggleAim"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_joh8s")
expand_mode = 3
stretch_mode = 4

[node name="VSeparator2" type="VSeparator" parent="BasicControls/MainContainer/HBoxContainer"]
layout_mode = 2

[node name="Controller" type="VBoxContainer" parent="BasicControls/MainContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 60

[node name="Movement" type="HBoxContainer" parent="BasicControls/MainContainer/HBoxContainer/Controller"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
alignment = 1

[node name="LeftStick" type="TextureRect" parent="BasicControls/MainContainer/HBoxContainer/Controller/Movement"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_8o04g")
stretch_mode = 5

[node name="Aim" type="HBoxContainer" parent="BasicControls/MainContainer/HBoxContainer/Controller"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
alignment = 1

[node name="RightStick" type="TextureRect" parent="BasicControls/MainContainer/HBoxContainer/Controller/Aim"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_7rhnu")
stretch_mode = 5

[node name="Fire" type="HBoxContainer" parent="BasicControls/MainContainer/HBoxContainer/Controller"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
alignment = 1

[node name="RightTrigger" type="TextureRect" parent="BasicControls/MainContainer/HBoxContainer/Controller/Fire"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_tywwa")
stretch_mode = 5

[node name="A" type="TextureRect" parent="BasicControls/MainContainer/HBoxContainer/Controller/Fire"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_4nl31")
stretch_mode = 5

[node name="Reload" type="HBoxContainer" parent="BasicControls/MainContainer/HBoxContainer/Controller"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
alignment = 1

[node name="RightBumper" type="TextureRect" parent="BasicControls/MainContainer/HBoxContainer/Controller/Reload"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_103jy")
stretch_mode = 5

[node name="X" type="TextureRect" parent="BasicControls/MainContainer/HBoxContainer/Controller/Reload"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_4vbk0")
stretch_mode = 5

[node name="Boost" type="HBoxContainer" parent="BasicControls/MainContainer/HBoxContainer/Controller"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
alignment = 1

[node name="LeftBumper" type="TextureRect" parent="BasicControls/MainContainer/HBoxContainer/Controller/Boost"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_gnjjl")
stretch_mode = 5

[node name="ToggleAim" type="HBoxContainer" parent="BasicControls/MainContainer/HBoxContainer/Controller"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
alignment = 1

[node name="B" type="TextureRect" parent="BasicControls/MainContainer/HBoxContainer/Controller/ToggleAim"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_b1v4l")
stretch_mode = 5

[node name="Objective" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -450.0
offset_right = 600.0
offset_bottom = 450.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainContainer" type="VBoxContainer" parent="Objective"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainLabel" type="Label" parent="Objective/MainContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "How To Play"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Objective/MainContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Objective/MainContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="DefeatEnemies" type="HBoxContainer" parent="Objective/MainContainer/VBoxContainer"]
custom_minimum_size = Vector2(1200, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="Objective/MainContainer/VBoxContainer/DefeatEnemies"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Enemies spawn in waves.
They become stronger as the
\"DANGER\" level rises."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icons" type="HBoxContainer" parent="Objective/MainContainer/VBoxContainer/DefeatEnemies"]
custom_minimum_size = Vector2(600, 80)
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Objective/MainContainer/VBoxContainer/DefeatEnemies/Icons"]
layout_mode = 2
texture = SubResource("AtlasTexture_826nh")
expand_mode = 3
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="Objective/MainContainer/VBoxContainer/DefeatEnemies/Icons"]
layout_mode = 2
texture = SubResource("AtlasTexture_q11j5")
expand_mode = 3
stretch_mode = 4

[node name="TextureRect3" type="TextureRect" parent="Objective/MainContainer/VBoxContainer/DefeatEnemies/Icons"]
layout_mode = 2
texture = SubResource("AtlasTexture_bubvu")
expand_mode = 3
stretch_mode = 4

[node name="TextureRect4" type="TextureRect" parent="Objective/MainContainer/VBoxContainer/DefeatEnemies/Icons"]
layout_mode = 2
texture = SubResource("AtlasTexture_yinse")
expand_mode = 3
stretch_mode = 4

[node name="DestroyObstacles" type="HBoxContainer" parent="Objective/MainContainer/VBoxContainer"]
custom_minimum_size = Vector2(1200, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Objective/MainContainer/VBoxContainer/DestroyObstacles"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Buildings can be destroyed.
Some chassis need to boost
in order to travel through them."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icons" type="HBoxContainer" parent="Objective/MainContainer/VBoxContainer/DestroyObstacles"]
custom_minimum_size = Vector2(600, 80)
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Objective/MainContainer/VBoxContainer/DestroyObstacles/Icons"]
layout_mode = 2
texture = SubResource("AtlasTexture_ah8sd")
expand_mode = 3
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="Objective/MainContainer/VBoxContainer/DestroyObstacles/Icons"]
layout_mode = 2
texture = SubResource("AtlasTexture_oa6dm")
expand_mode = 3
stretch_mode = 4

[node name="TextureRect3" type="TextureRect" parent="Objective/MainContainer/VBoxContainer/DestroyObstacles/Icons"]
layout_mode = 2
texture = SubResource("AtlasTexture_f3jc0")
expand_mode = 3
stretch_mode = 4

[node name="CollectXP" type="HBoxContainer" parent="Objective/MainContainer/VBoxContainer"]
custom_minimum_size = Vector2(1200, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Objective/MainContainer/VBoxContainer/CollectXP"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Collect XP to level up
and select new upgrades."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icons" type="HBoxContainer" parent="Objective/MainContainer/VBoxContainer/CollectXP"]
custom_minimum_size = Vector2(600, 80)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Objective/MainContainer/VBoxContainer/CollectXP/Icons"]
layout_mode = 2
texture = SubResource("AtlasTexture_1yym0")
expand_mode = 3
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="Objective/MainContainer/VBoxContainer/CollectXP/Icons"]
layout_mode = 2
texture = SubResource("AtlasTexture_e5adw")
expand_mode = 3
stretch_mode = 4

[node name="DestroyEggs" type="HBoxContainer" parent="Objective/MainContainer/VBoxContainer"]
custom_minimum_size = Vector2(1200, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Objective/MainContainer/VBoxContainer/DestroyEggs"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Destroy all eggs to summon a
boss. Defeat them to complete
the area."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icons" type="HBoxContainer" parent="Objective/MainContainer/VBoxContainer/DestroyEggs"]
custom_minimum_size = Vector2(600, 80)
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Objective/MainContainer/VBoxContainer/DestroyEggs/Icons"]
layout_mode = 2
texture = SubResource("AtlasTexture_m1me2")
expand_mode = 3
stretch_mode = 4

[node name="ResearchPoints" type="Label" parent="Objective/MainContainer/VBoxContainer"]
custom_minimum_size = Vector2(1200, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Defeating enemies and completing runs
Earns research points. Use these
to unlock new parts and co-pilots."
horizontal_alignment = 1
vertical_alignment = 1
